--- a/SimpleECS.vcxproj.filters
+++ b/SimpleECS.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClCompile Include="src\Game.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="include\Scene.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
