--- a/SimpleECS.vcxproj
+++ b/SimpleECS.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\GameRenderer.h" />
     <ClInclude Include="include\SimpleECS_Core.h" />
     <ClInclude Include="include\Component.h" />
     <ClInclude Include="include\Entity.h" />
@@ -162,10 +163,11 @@
     <ClInclude Include="include\Scene.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="include\Scene.cpp" />
+    <ClCompile Include="src\Scene.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="SimpleECS.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\GameRenderer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
