--- a/SimpleECS.vcxproj.filters
+++ b/SimpleECS.vcxproj.filters
@@ -30,10 +30,13 @@
     <ClInclude Include="include\SimpleECS_Core.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\GameRenderer.h">
+    <ClInclude Include="src\GameRenderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\RectangleRenderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TransformUtil.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -54,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\RectangleRenderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TransformUtil.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
