--- a/SimpleECS.vcxproj
+++ b/SimpleECS.vcxproj
@@ -163,9 +163,11 @@
     <ClInclude Include="include\Entity.h" />
     <ClInclude Include="include\Game.h" />
     <ClInclude Include="include\Scene.h" />
+    <ClInclude Include="include\Input.h" />
     <ClInclude Include="src\TransformUtil.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Input.cpp" />
     <ClCompile Include="src\Component.cpp" />
     <ClCompile Include="src\Entity.cpp" />
     <ClCompile Include="src\RectangleRenderer.cpp" />
