--- a/SimpleECS.vcxproj
+++ b/SimpleECS.vcxproj
@@ -155,7 +155,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\Collider.h" />
     <ClInclude Include="include\Transform.h" />
+    <ClInclude Include="src\ColliderSystem.h" />
     <ClInclude Include="src\GameRenderer.h" />
     <ClInclude Include="include\RectangleRenderer.h" />
     <ClInclude Include="include\SimpleECS_Core.h" />
@@ -167,6 +169,8 @@
     <ClInclude Include="src\TransformUtil.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Collider.cpp" />
+    <ClCompile Include="src\ColliderSystem.cpp" />
     <ClCompile Include="src\Input.cpp" />
     <ClCompile Include="src\Component.cpp" />
     <ClCompile Include="src\Entity.cpp" />
