--- a/SimpleECS.vcxproj
+++ b/SimpleECS.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\BoxCollider.h" />
     <ClInclude Include="include\Collider.h" />
     <ClInclude Include="include\Transform.h" />
     <ClInclude Include="src\ColliderSystem.h" />
@@ -169,6 +170,7 @@
     <ClInclude Include="src\TransformUtil.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\BoxCollider.cpp" />
     <ClCompile Include="src\Collider.cpp" />
     <ClCompile Include="src\ColliderSystem.cpp" />
     <ClCompile Include="src\Input.cpp" />
