--- a/SimpleECS.vcxproj
+++ b/SimpleECS.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="src\TransformUtil.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Vector.cpp" />
     <ClCompile Include="src\Timer.cpp" />
     <ClCompile Include="src\PhysicsBody.cpp" />
     <ClCompile Include="src\BoxCollider.cpp" />
