--- a/SimpleECS.vcxproj
+++ b/SimpleECS.vcxproj
@@ -79,8 +79,8 @@
     <LibraryPath>C:\vclib\SDL2-2.28.5\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\vclib\SDL2-2.28.5\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\vclib\SDL2-2.28.5\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\vclib\SDL2_ttf-2.20.2\include;C:\vclib\SDL2-2.28.5\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\vclib\SDL2_ttf-2.20.2\lib\x64;C:\vclib\SDL2-2.28.5\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>C:\vclib\SDL2-2.28.5\include;$(IncludePath)</IncludePath>
@@ -132,7 +132,7 @@
       <SubSystem>
       </SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -158,6 +158,7 @@
     <ClInclude Include="include\BoxCollider.h" />
     <ClInclude Include="include\Collider.h" />
     <ClInclude Include="include\Color.h" />
+    <ClInclude Include="include\FontRenderer.h" />
     <ClInclude Include="include\LineRenderer.h" />
     <ClInclude Include="include\PhysicsBody.h" />
     <ClInclude Include="include\Timer.h" />
@@ -175,6 +176,7 @@
     <ClInclude Include="src\TransformUtil.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\FontRenderer.cpp" />
     <ClCompile Include="src\LineRenderer.cpp" />
     <ClCompile Include="src\Vector.cpp" />
     <ClCompile Include="src\Timer.cpp" />
