--- a/SimpleECS.vcxproj
+++ b/SimpleECS.vcxproj
@@ -179,6 +179,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\ColliderCell.cpp" />
+    <ClCompile Include="src\ComponentPool.cpp" />
     <ClCompile Include="src\SoundPlayer.cpp" />
     <ClCompile Include="src\FontRenderer.cpp" />
     <ClCompile Include="src\LineRenderer.cpp" />
