--- a/SimpleECS.vcxproj
+++ b/SimpleECS.vcxproj
@@ -174,7 +174,7 @@
     <ClInclude Include="include\Game.h" />
     <ClInclude Include="include\Scene.h" />
     <ClInclude Include="include\Input.h" />
-    <ClInclude Include="src\ComponentPool.h" />
+    <ClInclude Include="include\ComponentPool.h" />
     <ClInclude Include="src\TransformUtil.h" />
   </ItemGroup>
   <ItemGroup>
