--- a/SimpleECS.vcxproj.filters
+++ b/SimpleECS.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="include\ComponentPool.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\CHandle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp">
