--- a/SimpleECS.Demos/Pong.vcxproj.filters
+++ b/SimpleECS.Demos/Pong.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="scripts\collisionStress.cpp">
+    <ClCompile Include="scripts\pong.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
