Organize include folder
- Matches src folder directory.
- Update header include references

--- a/SimpleECS.Demos/Pong.vcxproj
+++ b/SimpleECS.Demos/Pong.vcxproj
@@ -149,10 +149,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="scripts\pong.cpp" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <ClCompile Include="scripts\collisionStress.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
