--- a/SimpleECS.Library/SimpleECS.vcxproj
+++ b/SimpleECS.Library/SimpleECS.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\SimpleECSAPI.h" />
     <ClInclude Include="include\Collision\BoxCollider.h" />
     <ClInclude Include="include\Collision\Collider.h" />
     <ClInclude Include="include\Utility\Color.h" />
