--- a/SimpleECS.Tests/SimpleECS-tests.vcxproj
+++ b/SimpleECS.Tests/SimpleECS-tests.vcxproj
@@ -91,7 +91,7 @@
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <AdditionalIncludeDirectories>C:\Program Files\boost\boost_1_82_0;E:\Projects\SimpleECS\src;E:\Projects\SimpleECS\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Program Files\boost\boost_1_82_0;E:\Projects\SimpleECS\SimpleECS.Library\src;E:\Projects\SimpleECS\SimpleECS.Library\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
