--- a/SimpleECS.Demos/Pong.vcxproj
+++ b/SimpleECS.Demos/Pong.vcxproj
@@ -149,7 +149,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="scripts\collisionStress.cpp" />
+    <ClCompile Include="scripts\momentum.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
